# sitdown

./: Cargo.toml  README.md
examples/: README.md
examples/blog/: sitdown.toml
examples/blog/pages/: home.md
examples/blog/pages/logs/: daily.md  index.md
examples/blog/templates/: content.html  entries.html  layout.html
examples/book/: sitdown.toml
examples/book/content/: content.md  ending.md  introduction.md
examples/book/templates/: content.html  layout.html
src/: app.rs  config.rs  document.rs  error.rs  file_data.rs  file_tree.rs  files.rs  full_meta.rs  header.rs  info.rs  lib.rs  main.rs  meta.rs  metadata.rs  page.rs  path.rs  site.rs  templates.rs  test.rs  tree.rs  utils.rs
