[package]
name = "sitdown"
description = "Static site generator"
license = "MIT"
repository = "https://github.com/BenPski/sitdown"
authors = ["Ben Pawlowski ben@pepski.com"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
clap = { version = "4.5.10", features = ["derive"] }
env_logger = "0.11.5"
figment = { version = "0.10.19", features = ["env", "toml"] }
log = "0.4.22"
minijinja = { version = "2.1.0", features = ["loader"] }
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
pulldown-cmark = "0.11.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_yml = "0.0.11"
thiserror = "1.0.63"
tokio = { version = "1.38.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
